Complete rewriting. Now only work on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,43 +1,57 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(Hexaface VERSION 0.1)
 
-if (NOT DEFINED VALIDATION_LAYERS)
-    set(VALIDATION_LAYERS false)
-endif()
-
-if (NOT DEFINED WINDOW_SYSTEM)
-    set(WINDOW_SYSTEM "XLIB")
-endif()
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD_REQUIRED True)
 
 add_compile_options(-Wall)
 
 add_executable(
     hexaface
     src/main.c
-    src/window.c
     src/hxf.c
-    src/graphics/vulkan.c
-    src/graphics/vertex.c
+    src/app.c
+    src/win32/window.c
+    src/engine/vulkan.c
+    src/engine/input-handler.c
     src/math/linear-algebra.c
 )
 
-target_link_libraries(hexaface vulkan m)
+target_include_directories(hexaface PRIVATE include)
 
+add_custom_target(shaders)
+add_custom_command(
+    TARGET shaders PRE_BUILD
+    COMMAND glslc
+    ARGS -o vertex.spv ${CMAKE_SOURCE_DIR}/src/glsl/shader.vert
+)
+add_custom_command(
+    TARGET shaders PRE_BUILD
+    COMMAND glslc
+    ARGS -o fragment.spv ${CMAKE_SOURCE_DIR}/src/glsl/shader.frag
+)
+
+### Variable handling ###
+
+if(NOT DEFINED VALIDATION_LAYERS)
+    set(VALIDATION_LAYERS false)
+endif()
+if(NOT DEFINED DEBUG_ALLOC)
+    set(DEBUG_ALLOC false)
+endif()
+
+if(VALIDATION_LAYERS)
 # If the variable VALIDATION_LAYERS is set to true then build with the validation layers enabled
-if (VALIDATION_LAYERS)
     target_compile_definitions(hexaface PRIVATE HXF_VALIDATION_LAYERS)
 endif()
-
-### Window systems ####
-set(window_system_not_defined false)
-
-if (${WINDOW_SYSTEM} STREQUAL "XLIB")
-    target_compile_definitions(hexaface PRIVATE HXF_WINDOW_XLIB)
-    target_link_libraries(hexaface X11)
-else()
-    set(window_system_not_defined true)
+if(DEBUG_ALLOC)
+    # Debug the memory allocation (hxfMalloc and hxfFree for example)
+    target_compile_definitions(hexaface PRIVATE HXF_DEBUG_ALLOC)
 endif()
 
-if (${window_system_not_defined})
-    message(FATAL_ERROR "WINDOW_SYSTEM is not defined or is not set to the correct value: XLIB")
+if(WIN32) # Compile for windows
+    target_compile_definitions(hexaface PRIVATE HXF_WIN32)
+    target_link_options(hexaface PRIVATE -municode)
+    target_link_directories(hexaface PRIVATE lib)
+    target_link_libraries(hexaface vulkan-1)
 endif()
