--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,12 @@ add_executable(
     src/hxf.c
     src/app.c
     src/camera.c
+    src/world.c
     src/win32/window.c
     src/engine/vulkan.c
     src/engine/pipeline.c
     src/engine/input-handler.c
+    src/engine/game-handler.c
     src/math/linear-algebra.c
 )
 
